# rag-from-scratch

./: .gitignore  pyproject.toml  test.ipynb
rag_from_scratch/: __init__.py  abstractclass.py  chat.py  data.py  lm.py  retrieve.py
